[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Entities/bigsoldierspace.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Entities/bigsoldier.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Sprites/Other/image.axd.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Other/invisble.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.9949
height = 14.1885

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="soldier" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "prepare"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.42056 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="signn" type="AnimatedSprite" parent="."]
modulate = Color( 0.929412, 1, 0.364706, 0.196078 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="signn" to="." method="_on_sign_animation_finished"]
